@@ -128,8 +128,8 @@ public class Game {
      * Ends the game, announces the winners and performs necessary clean-up or state changes.
      */
     public void end(){
-        System.out.println("Final Mushroom Master Winner: "  + topMushroomMasters.getFirst().getScore() + " pts)");
-        System.out.println("Final Insect Master Winner: "  + topInsectMasters.getFirst().getScore() + " pts)");
+        System.out.println("Final Mushroom Master Winner: "  + topMushroomMasters.get(0).getScore() + " pts)");
+        System.out.println("Final Insect Master Winner: "  + topInsectMasters.get(0).getScore() + " pts)");
     }
     /**
      * updates top players and ends the game, when its over
